--- a/package.json
+++ b/package.json
@@ -9,16 +9,24 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "body-parser": "^1.20.2",
+    "bootstrap": "^5.3.2",
+    "fs-extra": "^11.2.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.1",
+    "next": "14.1.0",
     "react": "^18",
+    "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
-    "next": "14.1.0"
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "typescript": "^5"
   }
 }
