--- a/package.json
+++ b/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
+    "@types/next-auth": "^3.15.0",
     "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "date-fns": "^3.3.1",
     "fs-extra": "^11.2.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "next": "14.1.0",
+    "next-auth": "^4.24.6",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
