--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@types/next-auth": "^3.15.0",
+    "auth0": "^4.3.1",
     "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -21,6 +22,7 @@
     "mongoose": "^8.1.1",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
+    "node-auth0": "^1.0.0",
     "react": "^18",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18",
